# mess-desktop-entries

./: ChangeLog  Makefile.am  NEWS  README  autogen.sh  configure.ac  mess-dc.desktop.in  mess-desktop-entries.doap  mess-gameboy.desktop.in.in  mess-gba.desktop.in  mess-genesis.desktop.in.in  mess-msx.desktop.in  mess-n64.desktop.in  mess-nes.desktop.in  mess-sms.desktop.in.in  mess-snes.desktop.in.in
po/: LINGUAS  POTFILES.in  POTFILES.skip  bs.po  ca.po  cs.po  da.po  de.po  el.po  es.po  fr.po  gl.po  hu.po  lv.po  oc.po  pl.po  pt_BR.po  sl.po  sr.po  sr@latin.po  sv.po
